--- a/~/.config/alacritty/alacritty.yml
+++ b/~/.config/alacritty/alacritty.yml
@@ -77,7 +77,7 @@ font:
     # style: Italic
 
   # Point size of the font
-  size: 9.0
+  size: 11.0
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -95,7 +95,7 @@ font:
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
-  use_thin_strokes: true
+  # use_thin_strokes: true
 
 # Should display the render timer
 debug:
@@ -220,10 +220,11 @@ live_config_reload: true
 # You can set shell.program to the path of your favorite shell, e.g. /bin/fish.
 # Entries in shell.args are passed unmodified as arguments to the shell.
 #
-# shell:
-#   program: /bin/bash
-#   args:
-#     - --login
+shell:
+  program: "/bin/sh"
+  args:
+    - -c
+    - '$HOME/.dotfiles/~/.config/i3/MAIN.sh'
 
 # Key bindings
 #
