--- a/~/.config/mpd/mpd.conf
+++ b/~/.config/mpd/mpd.conf
@@ -14,15 +14,15 @@ restore_paused			"yes"
 #user				"nobody"
 #group				"nogroup"
 
-audio_output {
-	type		"alsa"
-	name             "CX20757 Analog : CX20757 Analog : playback 1 : capture 1"
-	auto_channels	"no"
-	auto_format	"no"
-	auto_resample	"no"
-	buffer_time     "2000000"
-	period_time     "50000"
-}
+#audio_output {
+#	type		"alsa"
+#	name             "CX20757 Analog : CX20757 Analog : playback 1 : capture 1"
+#	auto_channels	"no"
+#	auto_format	"no"
+#	auto_resample	"no"
+#	buffer_time     "2000000"
+#	period_time     "50000"
+#}
 
 auto_update_depth "5"
 
