--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -45,10 +45,14 @@ Host github.com
   Hostname ssh.github.com
   User git
   Port 443
+  IdentityFile ~/.secrets/ssh/lejenome@github.com:ubuntu-sway
+
 Host gist.github.com
   Hostname ssh.github.com
   User git
   Port 443
+  IdentityFile ~/.secrets/ssh/lejenome@github.com:ubuntu-sway
+
 Host bitbucket.org
   Hostname altssh.bitbucket.org
   User git
@@ -61,7 +65,7 @@ Host bitbucket.org
 #   TCPKeepAlive yes
 #   ServerAliveInterval 60
 #   PasswordAuthentication no
-#   IdentityFile ~/.ssh/id_ed25519
+#   IdentityFile ~/.secrets/ssh/id_ed25519
 
 Host tik.vps633711
   User      admin
@@ -70,7 +74,7 @@ Host tik.vps633711
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 Host tik.vps762569
   User      admin
@@ -79,7 +83,7 @@ Host tik.vps762569
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 Host tik.vps802333
   User      admin
@@ -89,7 +93,7 @@ Host tik.vps802333
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 Host tik.lms0001
   User      admin
@@ -99,7 +103,7 @@ Host tik.lms0001
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 Host tik.lms0002
   User      admin
@@ -109,7 +113,7 @@ Host tik.lms0002
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 # Host tik.lms0003
 #   User      admin
@@ -119,7 +123,7 @@ Host tik.lms0002
 #   TCPKeepAlive yes
 #   ServerAliveInterval 60
 #   PasswordAuthentication no
-#   IdentityFile ~/.ssh/id_ed25519
+#   IdentityFile ~/.secrets/ssh/id_ed25519
 
 Host tik.lms0004
   User      admin
@@ -129,7 +133,7 @@ Host tik.lms0004
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 Host tik.lms0005
   User      admin
@@ -139,7 +143,7 @@ Host tik.lms0005
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 Host tik.lms0006 lms0006.tik.website
   User      admin
@@ -149,7 +153,7 @@ Host tik.lms0006 lms0006.tik.website
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
 
 Host tik.lms0007 lms0007.tik.website
   User      admin
@@ -158,7 +162,17 @@ Host tik.lms0007 lms0007.tik.website
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  IdentityFile ~/.ssh/id_ed25519
+  IdentityFile ~/.secrets/ssh/admin@tik.website
+
+Host vps.etakwin vps-f1497d7d.vps.ovh.net
+  User      etakwin
+  Port      110
+  HostName  vps-f1497d7d.vps.ovh.net
+  TCPKeepAlive yes
+  ServerAliveInterval 60
+  PasswordAuthentication no
+  PubkeyAuthentication yes
+  IdentityFile ~/.secrets/ssh/admin@etakwin.com
 
 # Host djagora
 #   HostName 10.30.0.250
@@ -176,10 +190,11 @@ Host *
     VisualHostKey yes
     HashKnownHosts yes
     #FingerprintHash md5
+
 Host *
 #    proxycommand socat - PROXY:10.30.0.11:%h:%p,proxyport=8080,proxyauth=11050096:lo66e3z9
     ControlMaster auto
-    ControlPath ~/.ssh/sockets/%r@%h:%p
+    #ControlPath ~/.ssh/sockets/%r@%h:%p
     ControlPersist 5m
     ServerAliveInterval 5
     ServerAliveCountMax 1
