--- a/~/.ssh/config
+++ b/~/.ssh/config
@@ -164,15 +164,17 @@ Host tik.lms0007 lms0007.tik.website
   PasswordAuthentication no
   IdentityFile ~/.secrets/ssh/admin@tik.website
 
-Host vps.etakwin vps-f1497d7d.vps.ovh.net
-  User      etakwin
+Host etakwin.vps vps-f1497d7d.vps.ovh.net
+  User etakwin
+  #User ubuntu
+  HostName vps-f1497d7d.vps.ovh.net
   Port      110
-  HostName  vps-f1497d7d.vps.ovh.net
+  #Port      22
   TCPKeepAlive yes
   ServerAliveInterval 60
   PasswordAuthentication no
-  PubkeyAuthentication yes
   IdentityFile ~/.secrets/ssh/admin@etakwin.com
+  #IdentityFile ~/.secrets/ssh/admin@tik.website
 
 # Host djagora
 #   HostName 10.30.0.250
