--- a/~/.tmux.conf
+++ b/~/.tmux.conf
@@ -150,3 +150,21 @@ bind M-F6 split-window -h -p 60
 bind M-F7 split-window -h -p 70
 bind M-F8 split-window -h -p 80
 bind M-F9 split-window -h -p 90
+
+### To support nested tmux (from ssh session), F12 will disable keybinding interception
+bind -T root F12  \
+  set prefix None \;\
+  set key-table off \;\
+  set status-style "fg=$color_status_text,bg=$color_window_off_status_bg" \;\
+  set window-status-current-format "#[fg=$color_window_off_status_bg,bg=$color_window_off_status_current_bg]$separator_powerline_right#[default] #I:#W# #[fg=$color_window_off_status_current_bg,bg=$color_window_off_status_bg]$separator_powerline_right#[default]" \;\
+  set window-status-current-style "fg=$color_dark,bold,bg=$color_window_off_status_current_bg" \;\
+  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+  refresh-client -S \;\
+
+bind -T off F12 \
+  set -u prefix \;\
+  set -u key-table \;\
+  set -u status-style \;\
+  set -u window-status-current-style \;\
+  set -u window-status-current-format \;\
+  refresh-client -S
