--- a/etc/locale.conf
+++ b/etc/locale.conf
@@ -1,5 +1,11 @@
 LANG=en_US.UTF-8
-#LANGUAGE=en_US:en:fr_FR:fr:ar_TN:ar
-LC_TIME=en_DK.UTF-8
+LC_ADDRESS=fr_FR.UTF-8
+LC_IDENTIFICATION=fr_FR.UTF-8
+LC_MEASUREMENT=fr_FR.UTF-8
+LC_MONETARY=fr_FR.UTF-8
+LC_NAME=fr_FR.UTF-8
+LC_PAPER=fr_FR.UTF-8
+LC_TELEPHONE=fr_FR.UTF-8
+LC_TIME=fr_FR.UTF-8
 LC_NUMERIC=C
 LC_COLLATE=C
