--- a/etc/systemd/journald.conf
+++ b/etc/systemd/journald.conf
@@ -1,31 +1,42 @@
 #  This file is part of systemd.
 #
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
+#  systemd is free software; you can redistribute it and/or modify it under the
+#  terms of the GNU Lesser General Public License as published by the Free
+#  Software Foundation; either version 2.1 of the License, or (at your option)
+#  any later version.
 #
-# See journald.conf(5) for details
+# Entries in this file show the compile time defaults. Local configuration
+# should be created by either modifying this file (or a copy of it placed in
+# /etc/ if the original file is shipped in /usr/), or by creating "drop-ins" in
+# the /etc/systemd/journald.conf.d/ directory. The latter is generally
+# recommended. Defaults can be restored by simply deleting the main
+# configuration file and all drop-ins located in /etc/.
+#
+# Use 'systemd-analyze cat-config systemd/journald.conf' to display the full config.
+#
+# See journald.conf(5) for details.
 
 [Journal]
 Storage=auto
 Compress=yes
 Seal=yes
 SplitMode=uid
-SystemMaxUse=10M
-RuntimeMaxUse=20M
-SyncIntervalSec=10m
-SystemMaxFileSize=1M
-RuntimeMaxFileSize=1M
-RuntimeKeepFree=10M
-SystemKeepFree=10M
-#RateLimitInterval=30s
-#RateLimitBurst=1000
+#SystemMaxUse=10M
+#RuntimeMaxUse=20M
+#SyncIntervalSec=10m
+#SystemMaxFileSize=1M
+#RuntimeMaxFileSize=1M
+#RuntimeKeepFree=10M
+#SystemKeepFree=10M
+#RateLimitIntervalSec=30s
+#RateLimitBurst=10000
+#SystemMaxFiles=100
+#RuntimeMaxFiles=100
 #MaxRetentionSec=
 #MaxFileSec=1month
-#ForwardToSyslog=yes
+#ForwardToSyslog=no
 #ForwardToKMsg=no
-#ForwardToConsole=yes
+#ForwardToConsole=no
 #ForwardToWall=yes
 #TTYPath=/dev/console
 #MaxLevelStore=debug
@@ -33,3 +44,6 @@ SystemKeepFree=10M
 #MaxLevelKMsg=notice
 #MaxLevelConsole=info
 #MaxLevelWall=emerg
+#LineMax=48K
+#ReadKMsg=yes
+#Audit=yes
